responsiveness for small phones

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,147 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,600&display=swap');
-
-.App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  background-image: url('../public/pixlr-image-generator-329313f7-628c-4e1a-bc56-0e5e193daca3.png');
-  height: 1500px; /* You must set a specified height */
-  padding:   0px 0px 10px 0px;
-  text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
-  font-family: 'Open Sans', sans-serif;
+@media only screen and (max-width: 600px)  {
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-image: url('../public/pixlr-image-generator-329313f7-628c-4e1a-bc56-0e5e193daca3.png');
+    height: 1500px; /* You must set a specified height */
+    padding:   0px 0px 10px 0px;
+    text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
+    font-family: 'Open Sans', sans-serif;
+    width: 100%;
+  }
+  .navbar {
+    position: sticky; top: 0;
+    background-color: #282c34;
+    overflow: hidden;
+    height: 10vh;
+    min-height: 85px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    color: white;
+    z-index: 9999;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .video-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    width: 100%;
+    height: 33%;
+    border-radius: 20px;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .video {
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+  }
+  .section-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    width: 100%;
+    
+    height: 20%;
+    border-radius: 20px;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+    ;
+  }
+  .navbar-menu {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    font-size: .8rem;
+  }
 }
+@media only screen and (max-width: 600px)  {
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-image: url('../public/pixlr-image-generator-329313f7-628c-4e1a-bc56-0e5e193daca3.png');
+    height: 1500px; /* You must set a specified height */
+    padding:   0px 0px 10px 0px;
+    text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
+    font-family: 'Open Sans', sans-serif;
+    width: 100%;
+  }
+  .navbar {
+    position: sticky; top: 0;
+    background-color: #282c34;
+    overflow: hidden;
+    height: 10vh;
+    min-height: 85px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    color: white;
+    z-index: 9999;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .video-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    width: 100%;
+    height: 33%;
+    border-radius: 20px;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .video {
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+  }
+  .section-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    width: 100%;
+    
+    height: 20%;
+    border-radius: 20px;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+    ;
+  }
+  .navbar-menu {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    font-size: .8rem;
+  }
+}
+
 
 
 .App-header {
@@ -24,7 +155,20 @@
   color: white;
 }
 
-
+@media only screen and (min-width: 600px){
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-image: url('../public/pixlr-image-generator-329313f7-628c-4e1a-bc56-0e5e193daca3.png');
+    height: 1500px; /* You must set a specified height */
+    padding:   0px 0px 10px 0px;
+    text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
+    font-family: 'Open Sans', sans-serif;
+    width: 100%;
+  }
+  
 .navbar {
   position: sticky; top: 0;
   background-color: #282c34;
@@ -40,9 +184,8 @@
   color: white;
   z-index: 9999;
   box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
-
-
 
 
 .navbar-menu {
@@ -52,7 +195,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  font-size: 1rem;
 }
 
 .video {
@@ -76,7 +218,6 @@
   border-radius: 20px;
   box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 
 .logo {
   height: 95%;
@@ -106,6 +247,57 @@
   box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
   ;
 }
+
+.menu-button{
+  background-color: transparent;
+  color: white;
+  border: none;
+  font-size:  1em;
+  font-family: 'Open Sans', sans-serif;}
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+.logo {
+  height: 95%;
+  min-height: 90%;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+}
+/*
+.section-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  width: 40%;
+  max-width: 1080px;
+  min-width: 500px;
+  height: 20%;
+  border-radius: 20px;
+  box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+  ;
+}*/
 
 
 
