--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 75%;
    
   }
   .section-wrapper {
