--- a/src/App.css
+++ b/src/App.css
@@ -199,8 +199,7 @@
 }
 
 .video {
-  width: 200px;
-  display: flex;
+width:20%;  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
