--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@
     box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.5), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .video {
-    width: 75%;
+    height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -199,7 +199,8 @@
 }
 
 .video {
-width:20%;  display: flex;
+  height: 85%;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
