--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@
   color: white;
 }
 
-@media only screen and (min-width: 600px){
+@media only screen and (min-width: 1000px){
   .App {
     display: flex;
     flex-direction: column;
@@ -199,7 +199,7 @@
 }
 
 .video {
-  height: 85%;
+  width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -255,7 +255,7 @@
   border: none;
   font-size:  1em;
   font-family: 'Open Sans', sans-serif;}
-  }
+}
   
 
 
